--- a/proj2b/static/ngordnet.html
+++ b/proj2b/static/ngordnet.html
@@ -41,11 +41,13 @@ Your browser does not support the HTML5 canvas tag.</canvas>-->
     <td>
         <div class="btn" id = "history">history</div></td>
     <td>
-        <div class="btn" id = "historytext">history (text)</div>
-    </td>
+        <div class="btn" id = "historytext">history (text)</div></td>
     <td>
         <div class="btn" id = "hyponyms">hyponyms</div></td>
-
+    <td>
+        <div class="btn" id = "hypohist">hypohist</div></td>
+    <td>
+        <div class="btn" id = "hypohisttext">hypoist (text)</div></td>
 
 </tr>
 </table>
